# pygeogram

./: .gitignore  BINDINGS.md  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yml  deploy-site.yml
docs/: generate_demo.py  template.html
simple/pygeogram-ap/: index.html
src/: _pygeogram.cpp
src/pygeogram/: __init__.py  boolean.py  decimate.py  io.py  parameterize.py  reconstruct.py  remesh.py  repair.py  smooth.py
tests/: test_remesh.py
